# PubMed-Paper-Fetcher

./: .env.example  .gitignore  COMPLETE_DEMONSTRATION_SCRIPT.md  PROJECT_REPORT.md  README.md  SYSTEM_ARCHITECTURE.md  app.py  cli.py  llm_service.py  pubmed Report.docx  pubmed_results_20250710_142244.csv  pubmed_results_20250713_122028.csv  pubmed_results_20250713_170216.csv  pubmed_results_20250713_173659.csv  requirements.txt  test_app.py  test_web_app.py
get-papers-list/: .gitignore  NOTES.md  PUBLISHING.md  README.md  SETUP_GUIDE.md  USER_GUIDE.md  cli.py  get-papers-list.bat  pyproject.toml  requirements.txt  run_app.bat  setup.bat  simple_run.py  test_cli.py  test_paper_finder.py  validate_project.py  verify_requirements.bat
get-papers-list/paper_finder/: fetch.py  filter.py  output.py
paper_finder/: __init__.py  fetch.py  filter.py  output.py  parser.py
templates/: index.html
