[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = "CLI tool to find research papers with non-academic authors from PubMed"
authors = ["PubMed Paper Finder <pubmed.finder@example.com>"]
readme = "README.md"
packages = [{include = "paper_finder"}]
license = "MIT"
homepage = "https://github.com/example/get-papers-list"
repository = "https://github.com/example/get-papers-list"
keywords = ["pubmed", "research", "papers", "pharmaceutical", "biotech", "industry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Markup :: XML"
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31"
typer = "^0.12"
pandas = "^2.2"
lxml = "^5.2"
rich = "^13.7"

[tool.poetry.scripts]
get-papers-list = "cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
