[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = "CLI tool to find research papers with non-academic authors from PubMed"
authors = ["Developer <dev@example.com>"]
readme = "README.md"
packages = [{include = "paper_finder"}]
license = "MIT"
homepage = "https://github.com/Maniredii/Aganitha-Test"
repository = "https://github.com/Maniredii/Aganitha-Test"
keywords = ["pubmed", "research", "papers", "pharmaceutical", "biotech", "industry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Markup :: XML"
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31"
typer = "^0.12"
pandas = "^2.2"
lxml = "^5.2"
rich = "^13.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
toml = "^0.10"

[tool.poetry.scripts]
get-papers-list = "cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
